[tool.poetry]
name = "qpc"
version = "1.4.1"
description = ""
authors = ["QPC Team <quipucords@redhat.com>"]
license = "GPLv3"
exclude = [
    "**/test_*.py",
    "**/*_tests.py",
    "**/tests_*.py",
]

[tool.poetry.scripts]
qpc = 'qpc.__main__:main'

[tool.poetry.dependencies]
python = "^3.11"
requests = ">=2.28.1"
cryptography = ">=37.0.4"
packaging = "^23.1"
setuptools = "^67.8.0"

[tool.poetry.group.dev.dependencies]
coverage = ">=6.4.2"
black = ">=22.6.0"
pytest = ">=7.1.2"
pytest-cov = ">=3.0.0"
pytest-lazy-fixture = ">=0.6.3"
requests-mock = ">=1.9.3"
pytest-mock = "^3.8.2"
rstcheck = "^6.1.1"
ruff = "^0.1.3"
pip-tools = "^7.1.0"
pybuild-deps = "^0.1.1"


[tool.poetry.group.build.dependencies]
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "C90", # mccabe complexity
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "Q",   # flake8-quotes
    "W",   # pycodestyle
    "PL",  # Pylint
    "BLE", # flake8-blind-except
    "PTH", # flake8-use-pathlib
]
ignore = [
    "D107",
    "D203",
    "D403",
    "PLC1901",
    "PLR2004",
]
src = ["qpc"]
target-version = "py311"

[tool.ruff.per-file-ignores]
"**/commands.py" = ["F401"]
"**/test_*.py" = [
    "PLR0913"
]
"**/tests_*.py" = [
    "PLR0913"
]

[tool.ruff.isort]
known-first-party = ["qpc"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.pytest.ini_options]
pythonpath = "qpc"
python_files = [
    "tests.py",
    "test_*.py",
    "*_tests.py",
    "tests_*.py",
]
