[project]
name = "qpc"
version = "1.8.0"
license = {file = "LICENSE"}
requires-python = ">=3.11,<3.13"
dynamic = ["scripts"]

[tool.poetry]
name = "qpc"
version = "1.8.0"
description = ""
classifiers=[
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
authors = ["QPC Team <quipucords@redhat.com>"]
exclude = [
    "**/test_*.py",
    "**/*_tests.py",
    "**/tests_*.py",
]

[tool.poetry.scripts]
qpc = 'qpc.__main__:main'

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = ">=2.28.1"
cryptography = ">=37.0.4"
setuptools = "^70.0.0"
faker = "^20.0.3"

[tool.poetry.group.dev.dependencies]
coverage = ">=6.4.2"
pytest = ">=7.1.2 <8.0.0"
pytest-cov = ">=3.0.0"
pytest-lazy-fixture = ">=0.6.3"
requests-mock = ">=1.9.3"
pytest-mock = "^3.8.2"
rstcheck = "^6.1.1"
ruff = "^0"
pip-tools = "^7.1.0"
pybuild-deps = "^0.1.1"


[tool.poetry.group.build.dependencies]
sphinx = "^7.2.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "C90", # mccabe complexity
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "Q",   # flake8-quotes
    "W",   # pycodestyle
    "PL",  # Pylint
    "BLE", # flake8-blind-except
    "PTH", # flake8-use-pathlib
]
ignore = [
    "D107",
    "D203",
    "D403",
    "PLC1901",
    "PLR2004",
]
src = ["qpc"]
target-version = "py311"

[tool.ruff.per-file-ignores]
"**/commands.py" = ["F401"]
"**/test_*.py" = [
    "PLR0913"
]
"**/tests_*.py" = [
    "PLR0913"
]

[tool.ruff.isort]
known-first-party = ["qpc"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.pytest.ini_options]
pythonpath = "qpc"
python_files = [
    "tests.py",
    "test_*.py",
    "*_tests.py",
    "tests_*.py",
]
