[project]
name = "qpc"
version = "1.13.0"
description = "The command-line client for quipucords servers"
authors = [{ name = "QPC Team", email = "quipucords@redhat.com" }]
requires-python = ">=3.12,<3.14"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: GNU General Public License v3 (GPLv3)"]
dependencies = [
    "requests>=2.28.1",
    "cryptography>=37.0.4",
    "setuptools>=68.2.2,<71",
]

[project.scripts]
qpc = "qpc.__main__:main"

[dependency-groups]
dev = [
    "coverage>=6.4.2",
    "faker>=20.0.3,<21",
    "pytest>=7.1.2,<8.0.0",
    "pytest-cov>=3.0.0",
    "pytest-lazy-fixture>=0.6.3",
    "requests-mock>=1.9.3",
    "pytest-mock>=3.8.2,<4",
    "rstcheck>=6.1.1,<7",
    "ruff>=0,<1",
    "pip-tools>=7.1.0,<8",
    "pybuild-deps>=0.1.1,<0.2",
]
build = ["sphinx>=7.2.6,<8"]

[tool.uv]
default-groups = [
    "dev",
    "build",
]
required-version = ">=0.6.11,<0.7"

[tool.hatch.build.targets.sdist]
exclude = [
    "**/test_*.py",
    "**/*_tests.py",
    "**/tests_*.py",
]

[tool.hatch.build.targets.wheel]
exclude = [
    "**/test_*.py",
    "**/*_tests.py",
    "**/tests_*.py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.select = [
    "C90", # mccabe complexity
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "Q",   # flake8-quotes
    "W",   # pycodestyle
    "PL",  # Pylint
    "BLE", # flake8-blind-except
    "PTH", # flake8-use-pathlib
]
lint.ignore = [
    "D107",
    "D203",
    "D403",
    "PLC1901",
    "PLR2004",
]
src = ["qpc"]
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"**/commands.py" = ["F401"]
"**/test_*.py" = [
    "PLR0913"
]
"**/tests_*.py" = [
    "PLR0913"
]

[tool.ruff.lint.isort]
known-first-party = ["qpc"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pytest.ini_options]
pythonpath = "qpc"
python_files = [
    "tests.py",
    "test_*.py",
    "*_tests.py",
    "tests_*.py",
]
